# course_work

./: CMakeLists.txt  PageRank (1).ipynb  README.md  bert4rec_movilens.ipynb  csv_parser.h  dssm_movielens_trained.ipynb  dssm_vk_cup.ipynb  embedding_parser.cpp  embedding_parser.h  embeddings.ipynb  fastknn.cpp  fastknn.h  gru4rec_movielens_1.ipynb  inference.h  jan_metrics_movielens.ipynb  jan_results_vkcup (1).ipynb  jan_results_vkcup.ipynb  lin_methods_movielens.ipynb  logger.h  main.cpp  metric_learning_sample_training.ipynb  metrics.h  movielens_metrics.txt  ngcf_movielens.ipynb  ngcf_pretrained_movielens.ipynb  otto_gru4rec (2).ipynb  otto_gru4rec.ipynb  otto_shan.ipynb  otto_w2v.ipynb  progress_bar.h  queue_recommendations.cpp  queue_recommendations.h  recvae_movielens.ipynb  result_metrics_vk_cup.txt  sasrec_movielens.ipynb  sasrec_movielens_fix_bug.ipynb  shan_movielens.ipynb  srgnn_movielens.ipynb  srgnn_pretrained_movielens.ipynb  vkcup_recvae.ipynb  (+6 more)
tests/: CMakeLists.txt  test_bfs.cpp  test_knn.cpp  test_weight_parser.cpp
